--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -43,17 +43,17 @@
 <img style="width: 950px; ;" src="{% static 'rx/image/red and blues_tall.png' %}">
 <h1>The Script Report</h1>
 
-<p>Happy pills, benzos, tranqs, cotton, mother's little helper, dreamy-sleepy-nightie-snoozy-snooze. For every pill in the growing variety of modern psychotropic medication, a pet name. Some a product of abuse; others, fondness.
+<p class="margin">Happy pills, benzos, tranqs, cotton, mother's little helper, dreamy-sleepy-nightie-snoozy-snooze. For every pill in the growing variety of modern psychotropic medication, a pet name. Some a product of abuse; others, fondness.
 
-<p><a href="http://www.theguardian.com/news/2013/nov/20/mental-health-antidepressants-global-trends" target="_blank">Recent international studies</a> have cited stark upward trends in prescription drug consumption, especially of chemicals that act on the central nervous system including antidepressants, anti-anxiety drugs, sleep aids and opioid painkillers. Some of these medications carry significant risks of addiction alongside potentially severe side-effects up to fatal overdose. Street-level trade of prescription pills has also increased while <a href="http://www.bbc.co.uk/news/uk-northern-ireland-25058728" target="_blank">pharmaceutical supply chains have become wholesale targets of dealers</a>.
+<p class="margin"><a href="http://www.theguardian.com/news/2013/nov/20/mental-health-antidepressants-global-trends" target="_blank">Recent international studies</a> have cited stark upward trends in prescription drug consumption, especially of chemicals that act on the central nervous system including antidepressants, anti-anxiety drugs, sleep aids and opioid painkillers. Some of these medications carry significant risks of addiction alongside potentially severe side-effects up to fatal overdose. Street-level trade of prescription pills has also increased while <a href="http://www.bbc.co.uk/news/uk-northern-ireland-25058728" target="_blank">pharmaceutical supply chains have become wholesale targets of dealers</a>.
 
-<p>The Script Report uses general practitioner prescribing data recently made available to contextualize just how many of these types of drugs are regularly prescribed and consumed in Northern Ireland. Data available in other parts of the UK — England and Wales — also make it possible to form a basis for comparison within broadly similar health care systems.
+<p class="margin">The Script Report uses general practitioner prescribing data recently made available to contextualize just how many of these types of drugs are regularly prescribed and consumed in Northern Ireland. Data available in other parts of the UK — England and Wales — also make it possible to form a basis for comparison within broadly similar health care systems.
 
-<p>Monthly prescribing data for Northern Irish GPs are now released quarterly. With data already available for April though September 2013, The Detail looked at drugs in four categories of medication: antidepressants, anti-anxiety drugs, sedatives and opioid painkillers.
+<p class="margin">Monthly prescribing data for Northern Irish GPs are now released quarterly. With data already available for April though September 2013, The Detail looked at drugs in four categories of medication: antidepressants, anti-anxiety drugs, sedatives and opioid painkillers.
 
-<p>In all four categories, Northern Ireland outpaced other UK countries in its per person rate of drug consumption. The Detail also compared prescription rates within the level of economic disadvantage a GP's local community faces.
+<p class="margin">In all four categories, Northern Ireland outpaced other UK countries in its per person rate of drug consumption. The Detail also compared prescription rates within the level of economic disadvantage a GP's local community faces.
 
-<p>You can use this site to explore facts and statistics for individual drugs as well as overall prescribing trends at GPs across Northern Ireland, but first...
+<p class="margin">You can use this site to explore facts and statistics for individual drugs as well as overall prescribing trends at GPs across Northern Ireland, but first...
 
 <h3>Two important concepts to understand</h3>
 
@@ -135,35 +135,19 @@
 
 
 
-<div class="vizblocklock1">
-<h4>Average Daily Doses Prescribed <br>per 1,000 Patients per Month</h4>
-	<div id="vizblock1">
-		<select id="drug_drop1"></select>
-<a href="" onclick="return false;" id="group_button1" class="chart_button_left">Group</a>
-<a href="" onclick="return false;" id="sort_button1" class="chart_button_right">Sort</a><br>
-	</div>
-	<br>
-This graph shows the average monthly rate antidepressants are prescribed by GPs in Northern Ireland. The units are <a target="_blank" href="http://www.whocc.no/ddd/definition_and_general_considera/">defined daily doses</a> per 1,000 registered patients per month. Click GROUP to toggle GPs by local deprivation levels. SORT moves bars for comparison within deprivation groups or countries. The TOP DRUG bar shows how the current drug compares to the maximum antidepressant prescription rate.
-</div>
 
-<script type="text/javascript" src="{% static 'rx/js/d3_hbar_data1.js' %}"></script>
-<script type="text/javascript" src="{% static 'rx/js/d3_hbar.js' %}"></script>
+
+
 
 <h2>Antidepressants</h2>
-<p>Northern Irish patients consume more antidepressants than all other categories of prescription medication in our study combined – almost 7.5 million daily doses per month. In the six months The Detail studied, GPs prescribed enough of the drugs to give every man, woman, and child in the country a 27-day supply at the Defined Daily Dosage limits. By comparison, English GPs prescribed enough for 10 daily doses per registered patient. Wales doled out 19. 
-
-<p>The difference between each country's antidepressant prescription rate was actually greatest among GPs in least deprived areas. Northern Ireland consumed more than two and a half times the antidepressants than GPs in similar economic areas in England, per head. Wales was consistently closer to Northern Irish prescription rates, but still averaged over 25 percent fewer doses consumed per head across all deprivation groups.
-
-<p>GPs in least deprived areas of Northern Ireland tend to prescribe larger amounts of anti-anxiety drugs – 21 daily doses per patient in least deprived areas up to about 28 in most deprived. 
-
-<p>According to the most recent data available for 10 years, antidepressants are directly responsible for the deaths of about 21 people in Northern Ireland each year.
+<p class="margin">Northern Irish patients consume more antidepressants than all other categories of prescription medication in our study combined – almost 7.5 million daily doses per month. In the six months of prescribing data that The Detail analysed, GPs prescribed enough antidepressant drugs to give every man, woman, and child in the country a 27-day supply at the Defined Daily Dosage limits. By comparison, English GPs prescribed enough in six months for 10 daily doses per registered patient. Wales doled out 19.
 
 
 <!-- <object type="image/svg+xml" data="{% static 'rx/image/nir_opt.svg' %}" class="map"></object> -->
 <div id="minimaps">
 	<h4>International Antidepressant Consumption</h4>
 	<div class="center_limit">
-	<p><a href="http://www.psychologytoday.com/blog/side-effects/201311/the-oecd-warns-antidepressant-overprescribing">In a widely publicized report</a> last November, the Organization for Economic Co-operation and Development compared international antidepressant prescribing rates. The report cited the number of defined daily doses per 1,000 people per day, which is a measure designed to approximate the number of patients regularly using a medication per thousand.
+	<p><a href="http://www.psychologytoday.com/blog/side-effects/201311/the-oecd-warns-antidepressant-overprescribing">In a widely publicized report</a> last November, the Organization for Economic Co-operation and Development compared international antidepressant prescribing rates among 23 member countries, mostly European. The report cited the number of defined daily doses per 1,000 people per day, which is a measure designed to approximate the number of patients regularly using a medication per thousand.
 
 	<p>In the report, the United Kingdom ranked 7th highest among OECD member nations at 71 daily doses per thousand people per day. Topping the list was Iceland at 106 daily doses per thousand per day.
 
@@ -194,6 +178,68 @@ var nir_map_black = "{% static 'rx/image/nir_black.png' %}"
 </script>
 
 <script type="text/javascript" src="{% static 'rx/js/d3_mini_maps.js' %}"></script>
+
+
+<h4>Why?</h4>
+
+<p class="margin">But why are antidepressants prescribed in Northern Ireland so much more often or in such larger quantities? 
+
+<p class="margin">Using the prevalence of suicide as an approximation, severe mental health problems may be more endemic in Northern Ireland than in other parts of the UK.
+
+<p class="margin">According to the most recent data available for five years, 2007-2011, Northern Ireland averaged more than 15 suicides for every 100,000 people. That rate is 89 percent higher than the English average (just over 8 per 100,000) and 64 percent higher than the Welsh (about 9.5). 
+
+<p class="margin">The difference in Northern Irish antidepressant prescription rates, by way of comparison, is 140 percent higher than the English rate but only 22 percent higher than the Welsh. 
+
+<p class="margin">Those figures might suggest there is a significantly greater number of people suffering mental health problems in Northern Ireland and therefore higher prescription rates may just be keeping up with the greater need. But a one-to-one comparison of suicide rates to prescription rates may be misleading, since suicides represent such a small number compared to those taking antidepressants.
+
+<p class="margin">Depression prevalence statistics reported by GPs as part of the <a href="http://www.dhsspsni.gov.uk/statistics_and_research-qof-prevalence" target="_blank">Quality and Outcomes Framework</a> are a better indication of depression rates in the general population. Northern Ireland ranks middle of the pack in the UK, with an average of about 5.1 percent of a GP’s registered patients who have been diagnosed with depression at some point in their lifetime. England ranks highest at about 7.5 percent of patients having been clinically depressed. Wales reports just over 4 percent. 
+
+<p class="margin">All GPs don’t necessarily recognize symptoms of depression the same, still the statistics indicate England ranks highest in the rate of depression diagnosis and yet prescribes significantly fewer antidepressants per patient than Northern Ireland and Wales.
+
+<div class="vizblocklock1">
+<h4>Average Daily Doses Prescribed <br>per 1,000 Patients per Month</h4>
+	<div id="vizblock1">
+		<select id="drug_drop1"></select>
+<a href="" onclick="return false;" id="group_button1" class="chart_button_left">Group</a>
+<a href="" onclick="return false;" id="sort_button1" class="chart_button_right">Sort</a><br>
+	</div>
+	<br>
+This graph shows the average monthly rate antidepressants are prescribed by GPs in Northern Ireland. The units are <a target="_blank" href="http://www.whocc.no/ddd/definition_and_general_considera/">defined daily doses</a> per 1,000 registered patients per month. Click GROUP to toggle GPs by local deprivation levels. SORT moves bars for comparison within deprivation groups or countries. The TOP DRUG bar shows how the current drug compares to the maximum antidepressant prescription rate.
+</div>
+
+<script type="text/javascript" src="{% static 'rx/js/d3_hbar_data1.js' %}"></script>
+<script type="text/javascript" src="{% static 'rx/js/d3_hbar.js' %}"></script>
+
+<h4>Depressed/Deprived</h4>
+
+<p class="margin">As part of the GP prescribing data analysis, The Detail tested whether economic hardship was at all related to antidepressant prescription rates, which might help explain the difference in Northern Irish rates.
+
+<p class="margin">Local economic circumstances are measured in all UK countries by measures known as <a href="http://en.wikipedia.org/wiki/Multiple_deprivation_index" target="_blank">indices of deprivation</a>, which score local areas according to income and employment levels. The Detail used these indices to statistically test the relationship between the economic deprivation in a GP’s local community and its antidepressant prescription rate.
+
+<p class="margin">According to the analysis, deprivation scores are only weakly correlated with the number of antidepressant daily doses a GP prescribes per registered patient.
+
+<p class="margin">Across the three countries studied, the relationship between deprivation and antidepressant prescription rates is significantly stronger in Northern Ireland than in both England and Wales. But even in Northern Ireland the relationship is too weak to reliably indicate a relationship. In statistical terms, the level of deprivation only explains about 23 percent of the variability in the number of antidepressant daily doses prescribed. A reliable correlation should probably explain north of 50 percent.
+
+<p class="margin">Based on the analysis, it would be problematic to say economic deprivation drives the high prescription rate of antidepressants in Northern Ireland.
+
+<p class="margin">In fact, the difference between each country's antidepressant prescription rate was actually greatest among GPs in least deprived areas. Northern Ireland consumed more than two and a half times the antidepressants per head than GPs in similarly wealthy economic areas in England. Wales was consistently closer to Northern Irish prescription rates, but still averaged over 25 percent fewer doses consumed per head across all deprivation groups.
+
+<h4>Chicken-and-Egg</h4>
+
+<p class="margin">One relationship that has been well-established by research is that between depression and diabetes.
+
+<p class="margin">Estimates are that one in every three diabetes patients exhibits elevated symptoms of depression if not a clinical diagnosis. But it’s difficult to say definitively one condition causes the other.
+
+<p class="margin">Research by German diabetes research group, Forschungsinstitut der Diabetes-Akademie Mergentheim, has called the relationship between depression and diabetes a “chicken and egg” problem.
+
+<p class="margin">Their <a href="http://link.springer.com/article/10.1007/s11428-010-0678-4" target="_blank">research</a> found the presence of depression symptoms in a patient increases the likelihood of developing diabetes by 37 percent. Vice versa, patients diagnosed with Type-2 diabetes were 24 percent more likely to later exhibit symptoms of depression or have a clinical depressive disorder.
+
+
+<p class="margin">In the UK, Northern Ireland has the lowest rate of diabetes diagnoses, about 4 percent of the population according to <a href='https://www.diabetes.org.uk/About_us/What-we-say/Statistics/Diabetes-prevalence-2012/' target="_blank">the most recent prevalence statistics</a>. Again, England has the highest rate at 5.8 percent, slightly over 2.5 million people.
+
+
+
+
 
 
 <div class="drugs_list">
