--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -45,7 +45,13 @@
 
 <p class="margin">Happy pills, benzos, tranqs, cotton, mother's little helper, dreamy-sleepy-nightie-snoozy-snooze. For every pill in the growing variety of modern psychotropic medication, a pet name. Some a product of abuse; others, fondness.
 
-<p class="margin"><a href="http://www.theguardian.com/news/2013/nov/20/mental-health-antidepressants-global-trends" target="_blank">Recent international studies</a> have cited stark upward trends in prescription drug consumption, especially of chemicals that act on the central nervous system including antidepressants, anti-anxiety drugs, sleep aids and opioid painkillers. Some of these medications carry significant risks of addiction alongside potentially severe side-effects up to fatal overdose. Street-level trade of prescription pills has also increased while <a href="http://www.bbc.co.uk/news/uk-northern-ireland-25058728" target="_blank">pharmaceutical supply chains have become wholesale targets of dealers</a>.
+<p class="margin">According to the most recent 10 years of data available from the Northern Ireland Statistics and Research Agency, antidepressants are directly responsible for the deaths of about 21 people in Northern Ireland each year.
+
+<p class="margin">Benzodiazepines, a class of drugs commonly featured among anti-anxiety medicines, were responsible for the deaths of 290 people between 2003 and 2012.
+
+<p class="margin">Powerful opiates and sedatives carry a high risk of developing dependence, are often fatal in overdose and are sometimes a gateway to dangerous illegal drugs.
+
+<p class="margin"><a href="http://www.theguardian.com/news/2013/nov/20/mental-health-antidepressants-global-trends" target="_blank">Recent international studies</a> have cited stark upward trends in prescription drug consumption, especially of chemicals that act on the central nervous system including antidepressants, anti-anxiety drugs, sleep aids and opioid painkillers. Some of these medications carry significant risks of addiction alongside potentially severe side-effects up to fatal overdose. Street-level trade of prescription pills has also increased while <a href="http://www.bbc.co.uk/news/uk-northern-ireland-25058728" target="_blank">pharmaceutical supply chains have become wholesale targets of thieves</a> looking to meet demand for the hottest new street drugs.
 
 <p class="margin">The Script Report uses general practitioner prescribing data recently made available to contextualize just how many of these types of drugs are regularly prescribed and consumed in Northern Ireland. Data available in other parts of the UK — England and Wales — also make it possible to form a basis for comparison within broadly similar health care systems.
 
