--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -51,7 +51,7 @@
 
 <p class="margin">Powerful opiates and sedatives carry a high risk of developing dependence, are often fatal in overdose and are sometimes a gateway to dangerous illegal drugs.
 
-<p class="margin"><a href="http://www.theguardian.com/news/2013/nov/20/mental-health-antidepressants-global-trends" target="_blank">Recent international studies</a> have cited stark upward trends in prescription drug consumption, especially of chemicals that act on the central nervous system including antidepressants, anti-anxiety drugs, sleep aids and opioid painkillers. Some of these medications carry significant risks of addiction alongside potentially severe side-effects up to fatal overdose. Street-level trade of prescription pills has also increased while <a href="http://www.bbc.co.uk/news/uk-northern-ireland-25058728" target="_blank">pharmaceutical supply chains have become wholesale targets of thieves</a> looking to meet demand for the hottest new street drugs.
+<p class="margin">Despite the significant risks associated with many of these highly controlled chemicals, <a href="http://www.theguardian.com/news/2013/nov/20/mental-health-antidepressants-global-trends" target="_blank">recent international studies</a> have cited stark upward trends in prescription drug consumption, especially of chemicals that act on the central nervous system including antidepressants, anti-anxiety drugs, sleep aids and opioid painkillers. Some of these medications carry significant risks of addiction alongside potentially severe side-effects up to fatal overdose. Street-level trade of prescription pills has also increased while <a href="http://www.bbc.co.uk/news/uk-northern-ireland-25058728" target="_blank">pharmaceutical supply chains have become wholesale targets of thieves</a> looking to meet demand for the hottest new street drugs.
 
 <p class="margin">The Script Report uses general practitioner prescribing data recently made available to contextualize just how many of these types of drugs are regularly prescribed and consumed in Northern Ireland. Data available in other parts of the UK — England and Wales — also make it possible to form a basis for comparison within broadly similar health care systems.
 
@@ -186,7 +186,7 @@ var nir_map_black = "{% static 'rx/image/nir_black.png' %}"
 <script type="text/javascript" src="{% static 'rx/js/d3_mini_maps.js' %}"></script>
 
 
-<h4>Why?</h4>
+<h4>Causes</h4>
 
 <p class="margin">But why are antidepressants prescribed in Northern Ireland so much more often or in such larger quantities? 
 
@@ -242,6 +242,36 @@ This graph shows the average monthly rate antidepressants are prescribed by GPs 
 
 
 <p class="margin">In the UK, Northern Ireland has the lowest rate of diabetes diagnoses, about 4 percent of the population according to <a href='https://www.diabetes.org.uk/About_us/What-we-say/Statistics/Diabetes-prevalence-2012/' target="_blank">the most recent prevalence statistics</a>. Again, England has the highest rate at 5.8 percent, slightly over 2.5 million people.
+
+
+<h4>The Debate</h4>
+
+<p class="margin">Despite the steady increase of antidepressant consumption in the UK, experts are still split on whether they are over-prescribed. <a href="http://group.bmj.com/group/media/latest-news/are-antidepressants-overused" target="_blank">A recent debate in BMJ</a> (formerly the British Medical Journal) set out both sides of the argument.
+
+
+
+<p class="margin">Des Spence, Glaswegian GP writing that antidepressants are overprescribed, points out the seemingly low bar symptoms have to meet to be considered clinically depressive. 
+
+<p class="margin">Official guidelines state that two weeks of low mood should be classified as clinical depression, even after a bereavement. 
+
+<p class="margin">Spence also sees the influence of the pharmaceutical industry on prescribing practice:
+
+<blockquote style="margin:0px 90px 20px;">
+	<p>Mental illness is the drug industry’s golden goose: incurable, common, long term, and involving multiple medications. This relation with industry has engrained a therapeutic drug mindset to treat mental illness. … Isn’t this medicalising normality?</p>
+</blockquote>
+
+<p class="margin">Ian Reid, a professor of psychiatry and author of the counter opinion in BMJ, says antidepressant prescription has risen due to appropriate increases in the duration of treatment rather than an increase in the number of patients diagnosed with depression.
+
+<p class="margin">Antidepressants measured in national surveys are also used to treat symptoms outside those of clinical depression like neuropathic pain, he says. 
+
+<p class="margin">Reid blames the media for promoting the idea “that GPs are handing out antidepressants ‘like sweeties’” due to the limited availability of psychological therapy. 
+
+<p class="margin">“Actually, there is no consistent relation between the availability of psychological therapies and antidepressant use,” he said.
+
+<p class="margin">Spence questions, though, whether prescribing antidepressants is altogether necessary in many cases. He cites research that indicates only one in seven people actually benefit from an antidepressant regimen.
+
+
+<p class="margin">"Thus millions of people are enduring at least six months of ineffective treatment. People who do not respond fare worse, with switches of medications and often multiple drug combinations. How often do we tell patients these undisputed facts?"</p>
 
 
 
