--- a/prescript/static/rx/css/index.css
+++ b/prescript/static/rx/css/index.css
@@ -152,11 +152,12 @@ blockquote {
   border-left: 10px solid #ccc;
   margin: 5px 10px;
   padding: 0.5em 10px;
+  font-family: 'Lora', "Times New Roman", serif;
   quotes: "\201C""\201D""\2018""\2019";
 }
 blockquote:before {
   color: #ccc;
-  content: open-quote;
+  content: "\201C";
   font-size: 4em;
   line-height: 0.1em;
   margin-right: 0.25em;
