--- a/prescript/templates/rx/base.html
+++ b/prescript/templates/rx/base.html
@@ -134,7 +134,7 @@
 		         <li><a href="{% url 'rx.views.gp_search_name' %}"><span>Search by Name</span></a></li>
 		    </ul>
 	   </li>
-	   <li><a href='.' class="top_line"><span>About</span></a>
+	   <li><a href="{% url 'rx.views.about' %}" class="top_line"><span>About</span></a>
 	   </li>
 	   <li><a href='.' class="top_line"><span><img style="height:20px; width:30px; padding:10px; display:inline;" src="{% static 'rx/image/share.png' %}"></span></a>
 	      <ul>
