--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -360,6 +360,25 @@ The average monthly rate anti-anxiety drugs are prescribed by GPs in Northern Ir
 
 <h2 style='clear:left;'>Opioid Painkillers and Sedatives</h2>
 
+<div class="vizblocklock3">
+<h4>Average Daily Doses Prescribed <br>per 1,000 Patients per Month</h4>
+	<div id="vizblock3">
+		<select id="drug_drop3"></select>
+<a href="" onclick="return false;" id="group_button3" class="chart_button_left">Group</a>
+<a href="" onclick="return false;" id="sort_button3" class="chart_button_right">Sort</a><br>
+	</div>
+	<br>
+This graph shows the average monthly rate antidepressants are prescribed by GPs in Northern Ireland. The units are <a target="_blank" href="http://www.whocc.no/ddd/definition_and_general_considera/">defined daily doses</a> per 1,000 registered patients per month. Click GROUP to toggle GPs by local deprivation levels. SORT moves bars for comparison within deprivation groups or countries. The TOP DRUG bar shows how the current drug compares to the maximum antidepressant prescription rate.
+</div>
+
+<script type="text/javascript" src="{% static 'rx/js/d3_hbar_data3.js' %}"></script>
+<script type="text/javascript" src="{% static 'rx/js/d3_hbar3.js' %}"></script>
+
+
+
+
+
+
 <p>Opioids include very strong painkillers like morphine and oxycodone. They are often used in palliative care for pain relief in patients with serious illness. They are normally prescribed under close supervision and can carry a high risk of dependence with severe side-effects, especially on overdose. Sedatives are also habit-forming medications. Both types of drugs are regularly abused and traded on the black market.
 
 <p>About 850,000 daily doses of opioid analgesics are consumed by Northern Irish patients each month. Approximately 1.4 million daily doses of sedatives are consumed monthly.
