--- a/prescript/templates/rx/about.html
+++ b/prescript/templates/rx/about.html
@@ -13,7 +13,7 @@
 <div id="body_main">
 <img id="drug_title" src="{% static 'rx/image/pill box1.png' %}">
 <h2>About the Data</h2>
-<p>GP prescribing data are aggregated as a monthly total of the number of prescriptions and amounts of each drug prescribed by each GP and filled by a patient during the reporting period.
+<p>GP prescribing data are aggregated as a monthly total of the number of prescriptions and amount of each drug prescribed by each GP and filled by a patient during the reporting period.
 
 <p><a href="http://www.hscbusiness.hscni.net/services/2471.htm" target="_blank">Northern Irish prescribing data</a> are published by HSC Business Services Organization. The data are released quarterly, beginning with prescriptions filled April 2013. 
 
@@ -45,6 +45,11 @@
 
 
 <h2>Notes to Statistics</h2>
+
+<p>One major goal of the analysis was to determine how strong were the relationships between local economic circumstance, the prevalence of clinical depression and antidepressant prescription rate. 
+
+
+
 <table style="border-collapse:collapse; margin:20px auto;">
 <tr>
 <td id="warn_cell_img">
@@ -56,9 +61,11 @@
 </table>
 
 
-<h3>GP Deprivation Groups</h3>
 
-<p>One major goal of the analysis was to determine what effect economic circumstances had on antidepressant prescription rates. To measure the relationship, first some gauge of economics had to be assessed at the level of individual GPs. Official statistical indexes of deprivation at the smallest geographic census level were used.
+
+
+<h3>GP Deprivation Groups</h3>
+<p>First some gauge of local economics had to be assessed at the level of individual GPs. Official statistical indexes of deprivation at the smallest geographic census level were used.
 
 
 <img id="deprive_chart" src="{% static 'rx/image/GP_Deprivation_Distribution.png' %}">
@@ -74,12 +81,21 @@
 
 <h3>Deprivation Influence</h3>
 
+<p>The Detail tested the correlation between GPs' local deprivation score and antidepressant prescription rate in each country.
+
 <img id="deprive_ddd_charts" src="{% static 'rx/image/Deprivation_DDD_Charts.png' %}">
 <p>The Pearson correlation coefficients for GP deprivation scores and daily doses prescribed per registered patient were .44 for Northern Ireland; .31, Wales; .22, England, all of which were significant at p < .001 .
 
 <p>A few influential outliers were identified via Cook’s Distance for both Northern Ireland and England. Excluding four outlying data points did not significantly improve the correlation coefficient for England. Northern Ireland’s coefficient improved to .48 after excluding two influential outliers.
 
 <p>The differences between correlation coefficients were tested for statistical significance using the Fisher transformation. Northern Ireland’s correlation coefficient was significantly greater than Wales’ and England’s at p < .05 and p < .001, respectively.
+
+<p>Due to low correlation coefficients, antidepressant prescription rates were said to not necessarily be largely effected by economic deprivation levels. 
+
+<img id="qof_ddd_charts" src="{% static 'rx/image/QOF_DDD_Charts.png' %}">
+
+<img id="qof_dep_charts" src="{% static 'rx/image/QOF_Deprive_Charts.png' %}">
+
 
 
 </div>
