--- a/prescript/static/rx/css/about.css
+++ b/prescript/static/rx/css/about.css
@@ -31,7 +31,9 @@ a:hover{
 
 #deprive_chart{
 	display:block;
-	margin:40px auto 10px;
+	float:left;
+	width:500px;
+	padding: 30px 20px 10px 0px;
 }
 
 #deprive_ddd_charts{
@@ -70,3 +72,62 @@ a:hover{
 	font-weight: bold;
 	vertical-align: top;
 }
+
+
+
+/* GP Distribution VIZ Styles */
+
+#dist_viz{
+	float:left;
+	
+	margin-right: 20px;
+
+}
+
+.major_tick.label{
+        font-family:serif;
+        font-size:11px;
+        text-anchor:start;
+        
+    }
+
+.major_tick.ticks{
+        stroke:white;
+        stroke-width:2px;
+    }
+
+.major_tick.base{
+        stroke:white;
+        stroke-width:4px;
+    }
+.path_labs{
+        font-family:sans-serif;
+        kerning:3;
+        fill:white;
+        font-weight:600;
+        font-size:16px;
+    }
+.tick_lab{
+    kerning:1;
+    fill:#999999;
+    
+    }
+.viz_key{
+    font-family:"Times New Roman",serif;
+        font-size:20px;
+        font-style:italic;
+    
+    }
+.viz_instruct{
+    font-family:sans-serif;
+        font-size:12px;
+        font-style:italic; 
+    }
+.viz_title{
+    font:normal normal 30px "Times New Roman", serif;
+    }
+    
+.key{
+    stroke:black;
+    stroke-width:0px;
+    }
