--- a/prescript/templates/rx/base.html
+++ b/prescript/templates/rx/base.html
@@ -20,6 +20,15 @@
 <link rel="icon" type="image/png" href="{% static 'rx/image/favicon.ico' %}">
 
 
+<!-- TWITTER CARD -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@TheDetailTV">
+<meta name="twitter:title" content="The Detail: The Script Report">
+<meta name="twitter:description" content="BELFAST - Is Northern Ireland over-medicated? The Script Report examines the country's relationship with antidepressants and other psychotropic drugs. See statistics related to your own GP.">
+<meta name="twitter:creator" content="@JonRMcClure">
+<meta name="twitter:image:src" content="http://nir-prescriptions-app.herokuapp.com/static/rx/image/red%20and%20blues_tall.png">
+<meta name="twitter:domain" content="www.thedetail.tv">
+
 
 
 
